--- a/code.css
+++ b/code.css
@@ -17,7 +17,7 @@ body {
 }
 
 /* .code-title {
-  text-transform: uppercase;
+  font-family: sans-serif;
 } */
 
 .main-background-image {
@@ -34,10 +34,9 @@ body {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
-    padding-left: 150px;
-    padding-right: 110px;
-    padding-top: 50px;
+    padding-left: 11.75%;
+    padding-right: 9.5%;
+    padding-top: 4.5%;
     margin-bottom: 100px;
 }
 
@@ -70,6 +69,11 @@ a:hover {
     color: #06FDD0;
     font-size: xx-large;
     font-family: 'Londrina Solid', cursive;
+}
+
+.navbar-right {
+  padding-top: 17%;
+  margin: 2.5%;
 }
 
 .home-link:link {
