--- a/index.css
+++ b/index.css
@@ -15,33 +15,17 @@ body {
     position: relative;
 }
 
-/* .stars-container {
-    position: fixed;
-    opacity: 0;
-} */
-
-
-/* .pimg1 {
-    background-color: chartreuse;
-    min-height: 300px;
-    min-height: 100%;
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-} */
-
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
-    padding-left: 150px;
-    padding-right: 110px;
-    padding-top: 50px;
+    padding-left: 11.75%;
+    /* padding-right: 110px; */
+    padding-right: 9.5%;
+    padding-top: 4.5%;
     margin-bottom: 100px;
     min-height: 8vh;
 }
+
 
 .nav-bar-menu {
     display: flex;
@@ -49,6 +33,13 @@ body {
     line-height: 1;
     list-style-type: none;
     margin: 0;
+    padding-right: 8%;
+    padding-top: 1%;
+}
+
+.navbar-right {
+    padding-top: 13.5%;
+    margin: 2.5%;
 }
 
 .nav-bar-item {
@@ -77,7 +68,6 @@ a:hover {
     font-size: xx-large;
     font-family: 'Londrina Solid', cursive;   
 }
-
 
 .parallax-1 {
     display: flex;
@@ -1419,27 +1409,19 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
 
 .parallax-1 {
     /* min-height: 450px; */
-    padding-top: 70px;
+    padding-top: 9%;
     height: 90vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: sans-serif;
 }
 
-.gif-container {
-    max-width: 800px;
-    height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.home-gif {
+/* .home-video {
+    height: 75vh;
     width: 100vw;
-    height: 550px;
-}
+} */
 
 .parallax-2 {
     padding-top: 15px;
@@ -1463,8 +1445,8 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     align-items: center;
     justify-content: center;
     justify-content: space-around;
-    padding-top: 50px;
-    padding-bottom: 40px;
+    padding-top: 7%;
+    padding-bottom: 11.5%;
     margin: 0 auto;
 }
 
@@ -1558,14 +1540,14 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     }
     .nav-bar-menu {
         position: absolute;
-        right: 0%;
+        right: -50%;
         height: 92vh;
         top: 8vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: rgb(92, 184, 0);
-        transform: translateX(100%);
+        transform: translateX(0%);
         transition: transform 0.5s ease-in;
         width: 30%;
     }
@@ -1575,11 +1557,11 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .burger {
         display: block;
     }
+    .nav-active {
+        transform: translateX(-100%);
+    }
 }
 
-.nav-active {
-    transform: translateX(0%);
-}
 
 @keyframes navLinkFade {
     from {
