--- a/index.css
+++ b/index.css
@@ -140,6 +140,12 @@ a:hover {
 }
 }
 
+.stars-container {
+    display: flex;
+    min-height: 30vh;
+    width: 100%;
+}
+
 /* SHOOTING STAR: */
 @keyframes particleAnimation{
     83% {
@@ -1411,6 +1417,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     /* min-height: 450px; */
     padding-top: 9%;
     height: 90vh;
+    min-height: 90vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -1447,7 +1454,12 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     justify-content: space-around;
     padding-top: 7%;
     padding-bottom: 11.5%;
-    margin: 0 auto;
+    margin: 0 auto; */
+}
+
+.video-container {
+    display: flex;
+    /* min-height:  */
 }
 
 /* .footer-home {
@@ -1528,6 +1540,30 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     transition: all 0.3s ease;
 }
 
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+/* media queries */
+
 @media screen and (max-width: 1024px) {
     .nav-bar-menu {
         width: 60%;
@@ -1561,29 +1597,6 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         transform: translateX(-100%);
     }
 }
-
-
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-.toggle .line2 {
-    opacity: 0;
-}
-.toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-}
-
 
 
 
