--- a/code.css
+++ b/code.css
@@ -16,9 +16,9 @@ body {
   );
 }
 
-/* .code-title {
+.code-title {
   font-family: sans-serif;
-} */
+}
 
 .main-background-image {
     background-image: url(./img/Big\ Bend\ Night\ Landscape.jpg);
@@ -598,4 +598,31 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 .social a:hover {
   color: #000;
+}
+
+/* .copyright {
+  font-family: sans-serif;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  margin: 0 auto;
+} */
+
+.copyright-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  flex-direction: row;
+}
+
+.copyright {
+  font-family: sans-serif;
+  font-size: small;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  
 }
