adds media query that sets background image to scroll, to troubleshoot background image sizing issue on iPhone

--- a/index.css
+++ b/index.css
@@ -329,6 +329,8 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .nav-bar-menu {
         width: 60%;
     }
+    .main-background-image {
+        background-attachment: scroll;
 }
 
 @media screen and (max-width: 768px) {
