--- a/index.css
+++ b/index.css
@@ -331,6 +331,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     }
     .main-background-image {
         background-attachment: scroll;
+    }
 }
 
 @media screen and (max-width: 768px) {
