--- a/index.css
+++ b/index.css
@@ -332,6 +332,9 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .main-background-image {
         background-attachment: scroll;
     }
+    .stars-container {
+        background-attachment: fixed;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -340,16 +343,17 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     }
     .nav-bar-menu {
         position: absolute;
-        right: -50%;
+        /* right: -50%; */
+        left: -79%;
         height: 92vh;
         top: 8vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgb(92, 184, 0);
+        background-color: salmon;
         transform: translateX(0%);
         transition: transform 0.5s ease-in;
-        width: 30%;
+        width: 79%;
     }
     .nav-bar-menu li {
         opacity: 0;
@@ -358,7 +362,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         display: block;
     }
     .nav-active {
-        transform: translateX(-100%);
+        transform: translateX(100%);
     }
 }
 
