--- a/index.css
+++ b/index.css
@@ -344,7 +344,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .nav-bar-menu {
         position: absolute;
         /* right: -50%; */
-        left: -79%;
+        left: -65%;
         height: 92vh;
         top: 8vh;
         display: flex;
@@ -352,8 +352,8 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         align-items: center;
         background-color: salmon;
         transform: translateX(0%);
-        transition: transform 0.5s ease-in;
-        width: 79%;
+        transition: transform 0.1s ease-in;
+        width: 65%;
     }
     .nav-bar-menu li {
         opacity: 0;
@@ -363,6 +363,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     }
     .nav-active {
         transform: translateX(100%);
+        z-index: 1;
     }
 }
 
