adds black background to mobile navbar

--- a/index.css
+++ b/index.css
@@ -76,7 +76,6 @@ a:hover {
     display: flex;
     margin: 0 auto;
     align-items: center;
-    text-align: center;
     justify-content: center;
     font-family: sans-serif;
     background-attachment: fixed;
@@ -97,6 +96,10 @@ a:hover {
 
 .hello-world {
     padding-top: 50px;
+}
+
+.centered-home-text {
+    text-align: center;
 }
 
 
@@ -235,74 +238,10 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     width: 100vw;
 }
 
-/* .footer-home {
-    font-family: sans-serif;
-    display: flex;
-    align-items: center;
-    align-content: center;
-} */
-
-
-
-
-
-/* @keyframes twinkle (experimental version) {
-    0% {
-        opacity: 0.40;
-    }
-    2% {
-        opacity: 1;
-    }
-    6% {
-        opacity: 0.1;
-    }
-    11% {
-        opacity: 0.9
-    }
-    15% {
-        opacity: 0.25;
-    }
-    20% {
-        opacity: 0.7;
-    }
-    24% {
-        opacity: 0.5;
-    }
-    30% {
-        opacity: 1;
-    }
-    40% {
-        opacity: 0.65;
-    }
-    60% {
-        opacity: 0.72;
-    }
-    65% {
-        opacity: 0.33;
-    }
-    72% {
-        opacity: 0.15;
-    }
-    80% {
-        opacity: .57;
-    }
-    83% {
-        opacity: .48;
-    }
-    87% {
-        opacity: 1;
-    } */
-/* } */
-
-/* media queries */
-
-/* animated navbar w/ burger animation */
-
 .burger {
     display: none;
     cursor: pointer;
-    /* may add better solution than padding-top to make burger in-line with name */
-    padding-top: 15px;
+    padding-top: 19px;
 }
 
 .burger div{
@@ -356,10 +295,17 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     }
     .main-background-image {
         background-attachment: scroll;
-        height: 70vh;
+        height: 90vh;
     }
     .stars-container {
         display: none;
+    }
+    .home-image {
+        padding-top: 40px;
+        width: 90vw;
+    }
+    .hello-world {
+        padding-top: 35px;
     }
 }
 
@@ -378,7 +324,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         align-items: center;
         background-color: salmon;
         transform: translateX(0%);
-        transition: transform 0.1s ease-in;
+        transition: transform 0.2s ease-in;
         width: 65%;
     }
     .nav-bar-menu li {
@@ -390,6 +336,12 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .nav-active {
         transform: translateX(100%);
         z-index: 1;
+    }
+    nav {
+        background-color: black;
+        position: fixed;
+        top: 0;
+        width: 100%;
     }
 }
 
