--- a/about.css
+++ b/about.css
@@ -18,7 +18,7 @@ body {
 
 .about-title {
     font-family: sans-serif;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 h6 {
