--- a/index.css
+++ b/index.css
@@ -308,6 +308,9 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .hello-world {
         padding-top: 35px;
     }
+    .navbar-right {
+        font-size: 25px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -318,7 +321,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         position: absolute;
         left: -65%;
         height: 100vh;
-        top: 10.5vh;
+        top: 15vh;
         display: flex;
         flex-direction: column;
         align-items: center;
