--- a/about.css
+++ b/about.css
@@ -40,11 +40,11 @@ h6 {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
-    padding-left: 150px;
-    padding-right: 110px;
-    padding-top: 50px;
+    padding-left: 11.75%;
+    padding-right: 9.5%;
+    padding-top: 3.5%;
     margin-bottom: 100px;
+    min-height: 8vh;
 }
 
 .nav-bar-menu {
@@ -53,7 +53,6 @@ h6 {
     line-height: 1;
     list-style-type: none;
     margin: 0;
-
     padding-right: 8%;
     padding-top: 1%;
 }
@@ -92,4 +91,99 @@ a:hover {
 
 .roadtrip-image {
     margin: 5px;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    padding-top: 19px;
+}
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+@media screen and (max-width: 1024px) {
+    .nav-bar-menu {
+        width: 60%;
+    }
+    .main-background-image {
+        background-attachment: scroll;
+        height: 90vh;
+    }
+    .stars-container {
+        display: none;
+    }
+    .home-image {
+        padding-top: 40px;
+        width: 90vw;
+    }
+    .hello-world {
+        padding-top: 35px;
+    }
+    .navbar-right {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+    .nav-bar-menu {
+        position: absolute;
+        left: -65%;
+        height: 100vh;
+        top: 10.5vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: salmon;
+        transform: translateX(0%);
+        transition: transform 0.2s ease-in;
+        width: 65%;
+    }
+    .nav-bar-menu li {
+        opacity: 0;
+    }
+    .burger {
+        display: block;
+    }
+    .nav-active {
+        transform: translateX(100%);
+        z-index: 1;
+    }
+    nav {
+        background-color: black;
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
 }
