--- a/index.css
+++ b/index.css
@@ -291,9 +291,6 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
 } */
 
 @media screen and (max-width: 1024px) {
-    .nav-bar-menu {
-        width: 60%;
-    }
     .main-background-image {
         background-attachment: scroll;
         height: 90vh;
@@ -308,9 +305,6 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .hello-world {
         padding-top: 35px;
     }
-    .navbar-right {
-        font-size: 25px;
-    }
 }
 
 @media screen and (max-width: 768px) {
@@ -321,7 +315,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         position: absolute;
         left: -65%;
         height: 100vh;
-        top: 10.5vh;
+        top: 0vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -345,6 +339,15 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
         position: fixed;
         top: 0;
         width: 100%;
+    }
+    .nav-bar-item a {
+        color: #06FDD0;
+    }
+    .navbar-right {
+        font-size: 25px;
+    }
+    .nav-bar-menu {
+        width: 60%;
     }
 }
 
