--- a/code.css
+++ b/code.css
@@ -80,6 +80,102 @@ a:hover {
     text-decoration: none;
 }
 
+.burger {
+  display: none;
+  cursor: pointer;
+  padding-top: 19px;
+}
+
+.burger div{
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+
+@keyframes navLinkFade {
+  from {
+      opacity: 0;
+      transform: translateX(50px);
+  }
+  to {
+      opacity: 1;
+      transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+@media screen and (max-width: 1024px) {
+  .main-background-image {
+      background-attachment: scroll;
+      height: 90vh;
+  }
+  .stars-container {
+      display: none;
+  }
+  .about-title {
+      padding-top: 100px;
+  }
+  .spacer-container {
+    position:static;
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+      overflow-x: hidden;
+  }
+  .nav-bar-menu {
+      position: absolute;
+      left: -65%;
+      height: 100vh;
+      top: 0vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: salmon;
+      transform: translateX(0%);
+      transition: transform 0.2s ease-in;
+      width: 65%;
+  }
+  .nav-bar-menu li {
+      opacity: 0;
+  }
+  .burger {
+      display: block;
+  }
+  .nav-active {
+      transform: translateX(100%);
+      z-index: 1;
+  }
+  nav {
+      background-color: black;
+      position: fixed;
+      top: 0;
+      width: 100%;
+  }
+  .nav-bar-menu {
+    width: 60%;
+  }
+  .navbar-right {
+    font-size: 25px;
+  }
+}
+
+
 /* Social media icons for code page */
 
 .code-page-social-media-icons {
@@ -90,10 +186,6 @@ a:hover {
   text-align: right;
   /* float: right; */
 }
-
-
-
-
 
 .parallax-1 {
     display: flex;
