adds header/footer flair to multiple pages

--- a/about.css
+++ b/about.css
@@ -3,7 +3,20 @@ body {
     padding: 0;
 }
 
-.header-fill {
+.header-flair {
+    height: 10px;
+    width: 100vw;
+    /* background-color: slategray; */
+    background: repeating-radial-gradient(
+        circle,
+        #16A7A2,
+        #16A7A2 10px,
+        #13807C 10px, 
+        #13807C 20px
+    );
+}
+
+.footer-flair {
     height: 10px;
     width: 100vw;
     /* background-color: slategray; */
