--- a/code.css
+++ b/code.css
@@ -150,6 +150,7 @@ a:hover {
       transform: translateX(0%);
       transition: transform 0.2s ease-in;
       width: 65%;
+      z-index: 100;
   }
   .nav-bar-menu li {
       opacity: 0;
