--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-.header-fill {
+.header-flair {
     height: 10px;
     width: 100vw;
     /* background-color: slategray; */
@@ -14,6 +14,19 @@ body {
         #13807C 10px, 
         #13807C 20px
     );
+}
+
+.footer-flair {
+  height: 10px;
+  width: 100vw;
+  /* background-color: slategray; */
+  background: repeating-radial-gradient(
+      circle,
+      #16A7A2,
+      #16A7A2 10px,
+      #13807C 10px, 
+      #13807C 20px
+  );
 }
 
 .about-title {
