--- a/index.css
+++ b/index.css
@@ -318,6 +318,9 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .hello-world {
         padding-top: 35px;
     }
+    .video-container {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px) {
