--- a/index.css
+++ b/index.css
@@ -321,6 +321,43 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .video-container {
         display: none;
     }
+    /* mobile shooting star & animation */
+    .mobile-shooting-star {
+        position:absolute;
+        left: 0px;
+        width: 1px;
+        height: 1px;
+        background-color:white;
+        animation-name: particleAnimation;
+        animation-timing-function: linear;
+        animation-iteration-count: 1;
+        animation-duration: 4.5s;
+        animation-delay: 1s;
+        top: 37%;
+    }
+    
+    .mobile-shooting-star::before {
+        position: absolute;
+        display: block;
+        content: "";
+        width: 100px;
+        right: 1px;
+        top: 0px;
+        height: 1px;
+        background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100%); 
+        }
+    
+    @keyframes particleAnimation{
+        83% {
+            left: -100px;
+        }
+        from {
+            left: -100px;
+        }
+        to {
+            left: calc(100% + 100px);
+        }
+    }
 }
 
 @media screen and (max-width: 768px) {
