--- a/index.css
+++ b/index.css
@@ -324,12 +324,12 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     /* mobile shooting star & animation */
     .mobile-star-container {
         width: 100%;
-        height: auto;
+        height: 100%;
     }
     
     .mobile-shooting-star {
         position:absolute;
-        left: 0px; 
+        left: -80%; 
         width: 1px;
         height: 1px;
         background-color:white;
