--- a/contact.css
+++ b/contact.css
@@ -53,11 +53,11 @@ h6 {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
+    padding-left: 11.75%;
+    padding-right: 9.5%;
     padding-top: 1.5%;
-    padding-left: 150px;
-    padding-right: 110px;
     margin-bottom: 100px;
+    min-height: 8vh;
 }
 
 .nav-bar-menu {
@@ -66,7 +66,6 @@ h6 {
     line-height: 1;
     list-style-type: none;
     margin: 0;
-
     padding-right: 8%;
     padding-top: 1%;
 }
