--- a/about.css
+++ b/about.css
@@ -192,6 +192,7 @@ a:hover {
         width: 60%;
     }
     .navbar-right {
-        font-size: 25px;
+        font-size: 50px;
+        font-weight: bold;
     }
 }
