--- a/contact.css
+++ b/contact.css
@@ -191,7 +191,8 @@ a:hover {
       width: 60%;
   }
   .navbar-right {
-      font-size: 25px;
+    font-size: 50px;
+    font-weight: bold;
   }
 }
 
