--- a/portfolio-template/css/style.css
+++ b/portfolio-template/css/style.css
@@ -400,7 +400,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   height: 32px;
   cursor: pointer;
   position: relative;
-}
+} 
 
 .burger:before, .burger span, .burger:after {
   width: 100%;
@@ -426,10 +426,6 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   top: 15px;
 }
 
-.burger:after {
-  top: 26px;
-}
-
 /* Hover */
 .burger:hover:before {
   top: 7px;
@@ -437,7 +433,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 .burger:hover:after {
   top: 23px;
-}
+} */
 
 /* Click */
 .burger.active span {
@@ -454,7 +450,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 .burger.active:after {
   transform: rotate(-45deg);
-}
+} */
 
 .burger:focus {
   outline: none;
