star class position set to fixed, which locks them in place with parallax and avoids having them show up on section below

--- a/index.css
+++ b/index.css
@@ -102,7 +102,6 @@ a:hover {
     text-align: center;
 }
 
-
 /* FLICKERING NEON LIGHTS LETTERING: */
 .navbar-left {
     animation: text-flicker 3s linear infinite;
@@ -428,7 +427,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
 }
 
 .star {
-    position: fixed;
+    position: absolute;
     box-shadow: 0 0 3px #fff;
     border-radius: 50%;
 }
