--- a/code.css
+++ b/code.css
@@ -35,9 +35,10 @@ body {
     display: flex;
     justify-content: space-between;
     padding-left: 11.75%;
-    padding-right: 9.5%;
-    padding-top: 6%;
+    padding-right: 6.5%;
+    padding-top: 4.3%;
     margin-bottom: 100px;
+    min-height: 8vh;
 }
 
 .nav-bar-menu {
@@ -46,6 +47,8 @@ body {
     line-height: 1;
     list-style-type: none;
     margin: 0;
+    padding-right: 8%;
+    padding-top: 1%;
 }
 
 .nav-bar-item {
@@ -72,7 +75,7 @@ a:hover {
 }
 
 .navbar-right {
-  padding-top: 17%;
+  padding-top: 10%;
   margin: 2.5%;
 }
 
@@ -83,7 +86,7 @@ a:hover {
 .burger {
   display: none;
   cursor: pointer;
-  padding-top: 19px;
+  padding-top: 10px;
 }
 
 .burger div{
@@ -151,9 +154,6 @@ a:hover {
       transition: transform 0.2s ease-in;
       width: 65%;
   }
-  nav {
-    z-index: 1;
-  }
   .nav-bar-menu li {
       opacity: 0;
   }
@@ -169,6 +169,7 @@ a:hover {
       position: fixed;
       top: 0;
       width: 100%;
+      z-index: 1;
   }
   .nav-bar-menu {
     width: 60%;
@@ -177,6 +178,9 @@ a:hover {
     font-size: 50px;
     font-weight: bold;
   }
+  .navbar-left {
+    padding-top: 0px;
+}
 }
 
 
