--- a/contact.css
+++ b/contact.css
@@ -54,8 +54,8 @@ h6 {
     display: flex;
     justify-content: space-between;
     padding-left: 11.75%;
-    padding-right: 9.5%;
-    padding-top: 1.5%;
+    padding-right: 6.5%;
+    padding-top: 4.3%;
     margin-bottom: 100px;
     min-height: 8vh;
 }
@@ -186,6 +186,7 @@ a:hover {
       position: fixed;
       top: 0;
       width: 100%;
+      z-index: 1;
   }
   .nav-bar-menu {
       width: 60%;
