--- a/index.css
+++ b/index.css
@@ -254,7 +254,7 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
 .burger {
     display: none;
     cursor: pointer;
-    padding-top: 19px;
+    padding-top: 10px;
 }
 
 .burger div{
@@ -402,6 +402,9 @@ background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100
     .navbar-right {
         font-size: 50px;
         font-weight: bold;
+    }
+    .navbar-left {
+        padding-top: 0px;
     }
     .nav-bar-menu {
         width: 60%;
