--- a/code.css
+++ b/code.css
@@ -149,6 +149,9 @@ a:hover {
   body {
       overflow-x: hidden;
   }
+  .nav-bar {
+    padding-top: 3%;
+}
   .nav-bar-menu {
       position:absolute;
       left: -65%;
